--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import "./utils/variables";
 @import "./utils/mixins";
+@import "./utils/placeholders";
+@import "./utils/keyframes";
 
 @import "./components/buttons";
 
@@ -7,7 +9,7 @@
 @import "./base/font";
 
 @import "./layout/header";
-@import "./layout/forms";
+// @import "./layout/forms";
 @import "./layout/footer";
 
 
