--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,7 @@
 // FONTS
 
-$title_font: Shrikhand;
-$text_font: Roboto;
+$title_font: "Shrikhand";
+$main_font: "Roboto";
 
 // COLORS
 
@@ -11,4 +11,9 @@ $tertiary_color:  #99E2D0;
 $bg_color:  #EDEDED;
 $hover_color: #aa83da;
 $element_color: #c586f8;
-$location_bgc:#e7e5e5;
+$location_bgc:#dfdbdb;
+
+
+
+$color_shadow: black;
+$box_shadow: 3px 3px 10px;
