--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 header {
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid black;
+    box-shadow: 0 0 10px lighten($color_shadow, $amount:50);
 }    
 
 .logo_omf {
