--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -7,6 +7,11 @@
     border-radius: 25px;
     background: linear-gradient(to bottom right, $primary_color, $secondary_color);
     box-shadow: $box_shadow lighten($color_shadow, $amount: 50);
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+        font-size: 2.2rem;
+        padding: 30px 90px;
+        border-radius: 50px;
+    }
     &:hover {
         background: linear-gradient(to right bottom, lighten($primary_color, $amount:5), lighten($secondary_color, $amount:5));
         box-shadow: 6px 6px 10px darken($color_shadow, $amount:10);
