--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,9 +2,16 @@
     background-color: #353333;
     color: white;
     padding: 15px 0 25px 20px;
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+        padding: 30px 0 30px 40px;
+    }
     &_logo {
         height: .9rem;
         padding-bottom: 15px;
+        @media screen and (min-width: 768px) and (max-width: 991px) {
+            height: 1.8rem;
+            padding-bottom: 30px;
+        }
     }
     &_mention {
         &--line {
@@ -16,15 +23,26 @@
         &--icon1 {
             font-size: .7rem;
             margin-right: 12px;
+            @media screen and (min-width: 768px) and (max-width: 991px) {
+                font-size: 1.5rem;
+                margin-right: 24px;
+            }
         }
         &--icon2 {
             font-size: .6rem;
             margin-right: 10px;
+            @media screen and (min-width: 768px) and (max-width: 991px) {
+                font-size: 1.2rem;
+                margin-right: 21px;
+            }
         }
         &--text {
             font-size: .9rem;
             color: white;
             margin: 0;
+            @media screen and (min-width: 768px) and (max-width: 991px) {
+                font-size: 1.6rem;
+            }
         }
     }
 }
