--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,5 +7,9 @@ header {
 .logo_omf {
     height: 30px;
     padding: 10px 0;
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+        height: 60px;
+        padding: 20px 0;
+    }
 }
 
