--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -28,7 +28,7 @@
     }
     to {
         opacity: 1;
-        transform: rotate(-360deg);
+        transform: rotate(360deg);
     }
 }
 
@@ -41,10 +41,10 @@
     }
 }
 
-// @keyframes movePrice {
+// @keyframes showMeal {
 //     0% {
 //         opacity: 0;
-//         transform: translateX(9999px);
+//         transform: translateY(9999px);
 //     }
 //     10% {
 //         opacity: 1;
@@ -52,6 +52,6 @@
 //     }
 //     100% {
 //         opacity: 1;
-//         transform: translateX(0);
+//         transform: translateY(0);
 //     }
 // }
