--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,15 +1,21 @@
 header {
     display: flex;
+    position: relative;
     justify-content: center;
     box-shadow: 0 0 10px lighten($color_shadow, $amount:50);
 }    
 
 .logo_omf {
-    height: 30px;
-    padding: 10px 0;
+    height: 1.8em;
+    padding: 7% 0;
     @media screen and (min-width: 768px) and (max-width: 991px) {
-        height: 60px;
-        padding: 20px 0;
+        // height: 60px;
+        // padding: 20px 0;
     }
 }
 
+.heading__arrow {
+    position: absolute;
+    left: 1.2em;
+    top: 1.2em;
+}
