--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,154 +1,269 @@
 // LOCALISATION --------------------------------
 
-#location {
-    display: flex;
-    justify-content: center;
-    padding: 10px 0 10px 70px;
+.location {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  padding: .8em 0;
+  background-color: $location_bgc;
+  margin-top: .2em;
+
+  &__search-input {
+    font-size: 1.1rem;
+    width: 60%;
+    border: none;
     background-color: $location_bgc;
-    margin-top: 3px;
+
     @media screen and (min-width: 768px) and (max-width: 991px) {
-        padding: 15px 0 15px 90px;
+      // font-size: 1.8rem;
     }
+
+    @media screen and (min-width: 992px) {
+      font-size: 1rem;
+    }
+  }
+
+  &__form {
+    &-icon {
+      font-size: .9rem;
+      margin: 0 .6em;
+
+      @media screen and (min-width: 768px) and (max-width: 991px) {
+        // font-size: 1.6rem;
+      }
+    }
+  }
 }
 
-.location {
-    &_search_input {
-        font-size: 1.1rem;
-        border: none;
-        background-color: $location_bgc;
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-            font-size: 1.8rem;
-        }
-    }
-    &_form--icon {
-        font-size: .9rem;
-        margin: 0 10px;
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-            font-size: 1.6rem;
-        }
-    }
-}
 
 // EXPLORATION --------------------------------
 
-.top_content {
+.top-content{
     background-color: $bg_color;
-    padding-bottom: 70px;
+    padding-bottom: 5em;
     text-align: center;
-    &_title {
+    &__title {
         display: flex;
         justify-content: center;
         text-align: center;
-        margin: 30px;
-        padding: 30px 30px 0 30px;
+        width: 70%;
+        margin: 0 auto;
+        padding: 1.8em 1.8em 0 1.8em;
         font-family: $main_font;
+
+        @media screen and (min-width:992px) {
+            font-size: 1.8rem;
+        }
+    }
+    &__subtitle {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin: 1.8em;
+        padding-bottom: 1.2em;
+        font-size: 1.1rem;
+        font-family: $main_font;
+
         @media screen and (min-width: 768px) and (max-width: 991px) {
-            font-size: 3rem;
+            // font-size: 1.8rem;
+        }
+
+        @media screen and (min-width:992px) {
+            font-size: 1rem;
         }
     }
-    &_subtitle {
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        margin: 30px;
-        padding-bottom: 20px;
-        font-size: 1.1rem;
-        font-family: $main_font;
-    }
-    &_btn {
-        @include main_btn($secondary_color, $primary_color, 15px, 25px);
-        font-size: 1.1rem;
+    &__btn {
+        @include main_btn($secondary_color, $primary_color, .9em, 1.5em);
     }
 }
 
-// FONCTIONNEMENT --------------------------------
+.operations {
+  margin: 10% 0;
 
-#operations {
-    margin-top: 50px;
-    margin-bottom: 70px;
-}
+  @media screen and (min-width: 992px) {
+    margin: 5%;
+  }
 
-.title_test {
-    margin: 0 0 30px 20px;
+  &__title {
+    margin: 0 0 1.8em 1.2em;
     font-family: $main_font;
-    @media screen and (min-width: 768px) and (max-width: 991px) {
-        font-size: 3rem;
-    }
-}
 
-.step {
-    @include operation_style();
-    &_number {
-        @include step_number_style();
+    @media screen and (min-width: 992px) {
+      width: 50%;
+      text-align: center;
+      margin: 0 auto 1.8em;
     }
-    &_title {
-        padding-left: 20px;
+  }
+
+  &__steps {
+    @media screen and (min-width: 992px) {
+      display: flex;
     }
-    &_icon {
-        color: grey;
+  }
+
+  &__step {
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-radius: 25px;
+    width: 85%;
+    margin: 0 auto 1.8em auto;
+    padding: .6em 0;
+    font-family: $main_font;
+    background-color: lighten(#f2f2f2, $amount: 1);
+    box-shadow: $box_shadow lighten($color_shadow, $amount: 80);
+
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      width: 80%;
+      margin: 0 auto 2.5em auto;
     }
+
+    @media screen and (min-width: 992px) {
+      width: 30%;
+    }
+
+    &-icon {
+      color: grey;
+      padding-left: 2em;
+
+      @media screen and (min-width: 768px) and (max-width: 991px) {
+        font-size: 1.5rem;
+      }
+    }
+
+    &-title {
+      padding-left: 1.2em;
+
+      @media screen and (min-width: 768px) and (max-width: 991px) {
+        font-size: 1.5rem;
+      }
+    }
+
+    &-number {
+      border: 1px solid;
+      border-radius: 25px;
+      padding: .3em .6em;
+      color: white;
+      background-color: #9356DC;
+      position: absolute;
+      transform: translateX(-50%);
+
+      &-text {
+        margin: 0;
+      }
+    }
+
     &:hover {
-        background-color: lighten($primary_color, $amount:35);
-        .step_icon {
-            color: $primary_color;
-        }
+      background-color: lighten($primary_color, $amount: 35);
+
+      .operations__step-icon {
+        color: $primary_color;
+      }
     }
+  }
 }
 
 // RESTAURANTS --------------------------------
 
-#restaurants {
-    background-color: $bg_color;
-    padding-bottom: 35px;
-    padding-top: 30px;
-}
+.restaurants {
+  background-color: $bg_color;
+  padding: 2.2em 0 1.8em 0;
 
-.restaurants_title {
-    margin-left: 20px;
+  @media screen and (min-width: 768px) and (max-width: 991px) {
+    font-size: 1.8rem;
+  }
+
+  &__title {
+    margin-left: 1.2em;
     font-family: $main_font;
-}
 
-.cards {
-    padding: 0 20px;
-}
+    @media screen and (min-width: 992px) {
+      width: 12%;
+      margin: auto;
+      font-size: 2em;
+      margin-bottom: 3%;
+    }
+  }
 
-.card {
+  &__cards {
+    padding: 0 1.2em;
+
+    @media screen and (min-width: 992px) {
+      display: flex;
+      justify-content: space-around;
+      flex-flow: row wrap;
+      width: 80%;
+      margin: auto;
+    }
+  }
+
+  &__card {
     border-radius: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 1.2em;
     background-color: #fff;
     position: relative;
+    @include hearts(7%, 80%, 1.5em);
+    
+    @media screen and (min-width: 992px) {
+      width: 45%;
+      margin-bottom: 5%;
+    }
+
     box-shadow: $box_shadow lighten($color_shadow, $amount: 85);
-    &_cover_image {
-        width: 100%;
-        object-fit: cover;
-        height: 170px;
-        border-radius: 15px 15px 0 0;
+
+    a {
+      text-decoration: none;
     }
-    &_sticker {
-        font-family: $main_font;
-        background-color: $tertiary_color;
-        color: darken($tertiary_color, $amount: 45);
-        padding: 5px 10px;
-        position: absolute;
-        top: -5px;
-        right: 15px;
+
+    &-cover_image {
+      width: 100%;
+      object-fit: cover;
+      height: 12em;
+      border-radius: 15px 15px 0 0;
     }
-    &_title {
-        margin: 0;
-        padding: 10px 0 5px 15px;
-        font-family: $main_font;
-        color: black;
+
+    &-sticker {
+      font-family: $main_font;
+      background-color: $tertiary_color;
+      color: darken($tertiary_color, $amount: 45);
+      padding: .3em .6em;
+      position: absolute;
+      top: 1%;
+      right: 5%;
     }
-    &_location {
-        margin: 0;
-        padding: 0 0 15px 15px;
-        font-family: $main_font;
-        color: black;
+
+    &-title {
+      margin: 0;
+      padding: .6em 0 .3em 0.9em;
+      font-family: $main_font;
+      color: black;
     }
-    @include hearts(30px, 20px, 20px)
+
+    &-location {
+      margin: 0;
+      padding: 0 0 0.9em 0.9em;
+      font-family: $main_font;
+      color: black;
+    }
+
+    &-icon {
+      position: absolute;
+      top: 7%;
+      right: 80%;
+      padding: 1.5em;
+
+      .restaurants__card-empty {
+        position: relative;
+
+        .restaurants__card-full {
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+      }
+    }
+  }
 }
 
-.card > a {
-    text-decoration: none;
-}
 
