--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,174 +1,198 @@
 .heading__arrow {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-    @media screen and (min-width: 768px) and (max-width: 991px) {
-        font-size: 2rem;
-        top: 35px;
-        left: 40px;
-    }
+  position: absolute;
+  left: 20px;
+  top: 20px;
 }
-
 
 // BLOC MENU---------------------------------------------
-
-#menu {
-    background-color: #f2f2f2;
-    margin-bottom: 60px;
-    @media screen and (min-width: 768px) and (max-width: 991px) {
-        margin-bottom: 120px;
-    }
-}
-
 .menu {
+  background-color: #f2f2f2;
+  margin-bottom: 5em;
+
+  @media screen and (min-width:992px) {
+    margin-bottom: 5em;
+  }
+
+  &__image {
+    height: 12rem;
+    object-fit: cover;
+    width: 100%;
+
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      height: 22rem;
+    }
+
+    @media screen and (min-width:992px) {
+      height: 22rem;
+    }
+  }
+
+  &__bloc {
     position: relative;
     margin-top: -30px;
     background-color: #fff;
     border-radius: 35px 35px 0 0;
-    &_image {
-        height: 12rem;
-        object-fit: cover;
-        width: 100%;
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-            height: 22rem;
-        }
+
+    @media screen and (min-width:992px) {
+      height: 40rem;
     }
-    &_head {
+  }
+
+  &__bloc__head {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    align-items: center;
+    @include hearts(50px, 40px, 1.5em)
+  }
+
+  &__bloc__head__title {
+    font-family: $title_font;
+    font-size: 1.3em;
+    padding-left: 1.2em;
+    margin-top: 1.8em;
+
+    @media screen and (min-width:992px) {
+      margin-bottom: 3em;
+      font-size: 1.6em;
+    }
+  }
+
+  &__meal-category {
+    @media screen and (min-width:992px) {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 4em;
+    }
+
+    &--flex {
+      @media screen and (min-width:992px) {
         display: flex;
-        justify-content: space-between;
-        position: relative;
-        align-items: center;
-        &_title {
-            font-family: $title_font;
-            font-size: 1.3rem;
-            padding-left: 20px;
-            margin-top: 30px;
-            @media screen and (min-width: 768px) and (max-width: 991px) {
-                font-size: 2.2rem;
-                margin: 60px 0 40px 40px;
-            }
-        }
-        @include hearts(30px, 20px, 20px)
+        flex-direction: column;
+        width: 30%;
+      }
     }
-    &_btn {
-        text-align: center;
-        margin-top: 30px;
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-            margin-top: 80px;
-        }
-        &-order {
-            @include main_btn($secondary_color, $primary_color, 15px, 55px);
-        }
-    }
-}
+  }
 
-.meal_category {
-    &_title {
-        position: relative;
-        margin-left: 20px;
-        font-family: $main_font;
-        text-transform: uppercase;
-        font-weight: lighter;
-        font-size: 1rem;
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-            font-size: 1.7rem;
-            margin-left: 60px;
-        }
-        &::after {
-            position: absolute;
-            content: "";
-            display: block;
-            width: 42px;
-            height: 3px;
-            background-color: $tertiary_color;
-            @media screen and (min-width: 768px) and (max-width: 991px) {
-                width: 70px;
-                height: 5px;
-            }
-        }
-    }
-    &_container--flex {
-        padding-bottom: 20px;
-    }
-    &_card {
-        position: relative;
-        cursor: pointer;
-        font-family: $main_font;
-        border-radius: 15px;
-        background-color: #fff;
-        box-shadow: $box_shadow lighten($color_shadow, $amount: 85);
-        margin: 10px 20px;
-        padding: 0 0 0 15px;
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-            margin: 20px 60px;
-        }
-        &-box {
-            display: flex;
-            flex-direction: row;
-            overflow: hidden;
-            width: 100%;
-        }
-        &_title {
-            margin: 0;
-            padding-top: 10px;
-            font-family: $main_font;
-            @include ellipse;
-            @media screen and (min-width: 768px) and (max-width: 991px) {
-                font-size: 1.6rem;
-            }
-        }
-        &_infos {
-            width: 80%;
-            padding-top: -30px;
-        }
-        &_description {
-            margin: 0;
-            padding: 6px 0 10px 0;
-            font-family: $main_font;
-            font-size: .9rem;
-            @include ellipse;
-            @media screen and (min-width: 768px) and (max-width: 991px) {
-                font-size: 1.5rem;
-                padding: 12px 0 20px 0;
-            }
-        }
-        &_price {
-            position: relative;
-            font-size: .9rem;
-            font-weight: bolder;
-            width: 20%;
-            @media screen and (min-width: 768px) and (max-width: 991px) {
-                font-size: 1.4rem;
-            }
-        }
-        &_style {
-            position: absolute;
-            top: 38%;
-            right: 25px;
-            display: inline-block;
-            @media screen and (min-width: 768px) and (max-width: 991px) {
-                top: 30%;
-            }
-        }
-        &_select {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0;
-            width: 0%;
-            background-color: $tertiary_color;
-            border-radius: 0 15px 15px 0;
-            transition: all 1s;
-        }
-        &-icon {
-            opacity: 0;
-            font-size: 1.2rem;
-            background-color: #fff;
-            border-radius: 50%;
-            padding: 3px;
-            color: $tertiary_color;
-        }
-        @include animCheck;
-    }
-}
+  &__meal-category__title {
+    position: relative;
+    margin-left: 1.2em;
+    font-family: $main_font;
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-size: 1rem;
 
+    &::after {
+      position: absolute;
+      content: "";
+      display: block;
+      width: 42px;
+      height: 3px;
+      background-color: $tertiary_color;
+    }
+
+    @media screen and (min-width:992px) {
+      margin-left: 0;
+    }
+  }
+
+  &___meal-category__container-flex {
+    padding-bottom: 1.2em;
+  }
+
+  &__card {
+    position: relative;
+    cursor: pointer;
+    font-family: $main_font;
+    border-radius: 15px;
+    background-color: #fff;
+    box-shadow: $box_shadow lighten($color_shadow, $amount: 85);
+    margin: 0.6em 1.2em;
+
+    @media screen and (min-width:992px) {
+      width: 100%;
+      margin: 0.6em 0;
+    }
+
+    @include apparition;
+    @include animCheck;
+  }
+
+  &__card__box {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    width: 100%;
+
+    @media screen and (min-width:992px) {
+      width: 100%;
+    }
+  }
+
+  &__card__infos {
+    width: 80%;
+    padding-top: -30px;
+  }
+
+  &__card__title {
+    margin: 0;
+    padding: .6em 0 0 .9em;
+    font-family: $main_font;
+    @include ellipse;
+  }
+
+  &__card__description {
+    margin: 0;
+    padding: .3em 0 .6em .9em;
+    font-family: $main_font;
+    font-size: .9rem;
+    @include ellipse;
+  }
+
+  &__card__price {
+    position: relative;
+    font-size: .9rem;
+    font-weight: bolder;
+    width: 20%;
+  }
+
+  &__card__price-text {
+    position: absolute;
+    top: 38%;
+    right: 1.6em;
+    display: inline-block;
+  }
+
+  &__card__select {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    width: 0%;
+    background-color: $tertiary_color;
+    border-radius: 0 15px 15px 0;
+    transition: all 1s;
+  }
+
+  &__card__select-icon {
+    opacity: 0;
+    font-size: 1.2rem;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: .2em;
+    color: $tertiary_color;
+  }
+
+  &__btn {
+    text-align: center;
+    margin-top: 5em;
+
+    &--order {
+      @include main_btn($secondary_color, $primary_color, 15px, 75px);
+
+      @media screen and (min-width:992px) {
+        font-size: 1.5em;
+      }
+    }
+  }
+}
