--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -41,17 +41,11 @@
     }
 }
 
-// @keyframes showMeal {
-//     0% {
-//         opacity: 0;
-//         transform: translateY(9999px);
-//     }
-//     10% {
-//         opacity: 1;
-    
-//     }
-//     100% {
-//         opacity: 1;
-//         transform: translateY(0);
-//     }
-// }
+@keyframes apparition {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
