fix html lang, fix html links, add loader

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,34 @@
     opacity: 1;
   }
 }
+@keyframes loader-grow {
+  to {
+    transform: scale(1.2);
+    background-color: #FF79DA;
+    opacity: 1;
+  }
+}
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes home {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 body {
   max-width: 1440px;
   margin: 0;
@@ -154,6 +182,50 @@ header {
 
 .footer__mention-line > a {
   text-decoration: none;
+}
+
+.home {
+  opacity: 0;
+  animation: home 1s ease-in-out 3s forwards;
+}
+
+.loader {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  left: 0;
+  top: 0;
+  animation: loader 1s ease-in-out 3s forwards;
+}
+.loader--icone {
+  font-size: 4em;
+  margin-bottom: 50px;
+  color: #99E2D0;
+  animation: rotate 2000ms infinite;
+}
+.loader--ellipses {
+  display: flex;
+  width: 100px;
+  justify-content: space-between;
+}
+.loader--ellipses span {
+  background-color: #9356DC;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  opacity: 0;
+  animation: loader-grow 2000ms infinite alternate;
+}
+.loader--ellipses span:nth-child(2) {
+  animation-delay: 400ms;
+}
+.loader--ellipses span:nth-child(3) {
+  animation-delay: 800ms;
 }
 
 .location {
