--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,47 @@
+.home {
+  opacity: 0;
+  animation: home 1s ease-in-out 3s forwards;
+}
+
+.loader{
+  position:absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,0.7);
+  left: 0;
+  top: 0;
+  animation: loader 1s ease-in-out 3s forwards;
+  &--icone {
+      font-size: 4em;
+      margin-bottom: 50px;
+      color: $tertiary_color;
+      animation: rotate 2000ms infinite;
+    }
+  &--ellipses {
+      display: flex;
+      width: 100px;
+      justify-content: space-between;
+    }
+  &--ellipses span {
+      background-color: $primary_color;
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      opacity: 0;
+      animation: loader-grow 2000ms infinite alternate;
+    }
+  &--ellipses span:nth-child(2) {
+      animation-delay: 400ms;
+    }
+  &--ellipses span:nth-child(3) {
+      animation-delay: 800ms;
+    }
+}
+
 // LOCALISATION --------------------------------
 
 .location {
