--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,6 +102,7 @@ header {
   height: 1.8em;
   padding: 7% 0;
 }
+
 .heading__arrow {
   position: absolute;
   left: 1.2em;
@@ -252,6 +253,7 @@ header {
   font-size: 0.9rem;
   margin: 0 0.6em;
 }
+
 .top-content {
   background-color: #EDEDED;
   padding-bottom: 5em;
@@ -509,15 +511,6 @@ header {
   top: 20px;
 }
 
-.menu {
-  background-color: #f2f2f2;
-  margin-bottom: 5em;
-}
-@media screen and (min-width: 992px) {
-  .menu {
-    margin-bottom: 5em;
-  }
-}
 .menu__image {
   height: 12rem;
   object-fit: cover;
@@ -536,12 +529,14 @@ header {
 .menu__bloc {
   position: relative;
   margin-top: -30px;
-  background-color: #fff;
+  background-color: #f2f2f2;
   border-radius: 35px 35px 0 0;
+  padding-bottom: 5em;
 }
 @media screen and (min-width: 992px) {
   .menu__bloc {
     height: 40rem;
+    padding-bottom: 6em;
   }
 }
 .menu__bloc__head {
