--- a/public/css/style.css
+++ b/public/css/style.css
@@ -528,7 +528,7 @@ header {
 }
 .menu__bloc {
   position: relative;
-  margin-top: -30px;
+  top: -30px;
   background-color: #f2f2f2;
   border-radius: 35px 35px 0 0;
   padding-bottom: 5em;
