--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -22,7 +22,7 @@
 
   &__bloc {
     position: relative;
-    margin-top: -30px;
+    top: -30px;
     background-color: #f2f2f2;
     border-radius: 35px 35px 0 0;
     padding-bottom: 5em;
